--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -18,13 +18,32 @@
 
     .kod{
         display: flex;
-        margin-top: 20px;
+        margin-top: 12px;
         float: right;
     }
 
     
-  
+  .kok{
+      color:black;
+  }
 
+
+  .puff{
+    transform: scale(3);
+}
+
+.zoho{
+    display: flex;
+    height:56px;
+    width: 400px;
+    padding-left: 10px;
+    margin-left: 20px;
+    margin-top: 100px;;
+}
+.teal{
+    text-align: left;
+    padding-left: 20px;
+}
 
 
 
