--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,3 +1,25 @@
 .tera{
     transform: scale(2.89);
 }
+@import url('https://fonts.googleapis.com/css?family=Oxygen');
+
+.trux{
+    font-family: 'Oxygen';
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 76px;
+}
+
+.trux1{
+    font-family: 'Oxygen';
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 76px;
+    text-align: center;
+}
+
+
