--- a/src/components/personal/personal.css
+++ b/src/components/personal/personal.css
@@ -1,3 +1,4 @@
+  
 .tetris{
     background: #EF4646;
 }
@@ -40,9 +41,26 @@
     width: 100%;
     background: #FFFDE8; 
     height:457px;
-    overflow: hidden;
-    margin-top: 55px;
+    overflow: scroll;
+    margin-top: 62px;
 }
+
+
+/* width */
+.terov::-webkit-scrollbar {
+    width: 60px;
+  }
+
+.terov::-webkit-scrollbar-track {
+    display: none;
+  }  
+
+.terov::-webkit-scrollbar-thumb {
+    background:#EF4646;
+    height: 150px;
+    border-radius: 30px;
+    border: 25px #FFFDE8 solid;
+  }  
 
 .terova{
     position: fixed;
@@ -180,3 +198,46 @@
     }
 
 }
+
+@media only screen and (max-height: 800px) and (min-height: 700px) and (max-width: 1350px) and (min-width: 1110px){
+    .crux {
+        position: absolute;
+        height: 300px;
+        width: 100%;
+        margin-top: 0.005rem;
+    }
+
+     .color{
+        background: #FFFDE8; 
+        padding-top: 0px;
+        position: absolute;
+        margin-top:75px ;
+        border-radius: 20px 20px 0px 0px;
+        width: 100%;
+    }
+
+    .terova {
+        position: absolute;
+        margin-top: 16.5em;
+        width: 100%;
+        background: #FFFDE8; 
+        height: 300px;
+    }
+    .check{
+        background-color:#FFFDE8;
+        width: 100%;
+        height: 10px;
+    }
+    .terov{
+        position: absolute;
+        width: 100%;
+        background-color: #FFFDE8;
+        height: 210px;
+        overflow: hidden;
+        margin-top: 67px;
+    }
+}
+
+
+   
+   
