--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
     color: #FFFFFF;
     font-style: normal;
     font-weight: bold;
-    font-size: 3.5rem;
+    font-size: 3rem;
 
 }
 
@@ -17,8 +17,9 @@
     color: #FFFFFF;
     font-style: normal;
     font-weight: bold;
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     text-align: center;
+    margin-top: 6px;
 }
 
 @media only screen and (max-height: 800px) and (min-height: 700px) and (max-width: 1350px) and (min-width: 1110px){
