--- a/src/components/personal/personal.css
+++ b/src/components/personal/personal.css
@@ -192,13 +192,13 @@
         position: absolute;
         height: 300px;
         width: 100%;
-        margin-top: 145px;
+        margin-top: 45px;
      }
      .color{
         background: #FFFDE8; 
         padding-top: 0px;
         position: absolute;
-        margin-top:220px ;
+        margin-top:120px ;
         border-radius: 20px 20px 0px 0px;
         width: 100%;
     }
@@ -209,11 +209,26 @@
     }
     .terova {
         position: fixed;
-        margin-top: 31.7em;
+        margin-top: 24.7em;
         width: 100%;
         background: #FFFDE8; 
         height: 300px;
-        }
+    }
+    .chez{
+        position: absolute;
+        width:100%;
+        background-color:#FFFDE8;
+        margin-top: -1.0rem;
+    }
+    .terov{
+        position: absolute;
+        width: 100%;
+        background-color: #FFFDE8;
+        height: 384px;
+        overflow: scroll;
+        margin-top:5rem;
+    }
+
 }
 
    @media only screen and (max-width: 1110px)  and (min-width: 550px){
@@ -221,18 +236,18 @@
         position: absolute;
         height: 300px;
         width: 100%;
-        margin-top: 76px;
+        margin-top: 36px;
      }
      .color{
         background: #FFFDE8; 
         padding-top: 0px;
         position: absolute;
-        margin-top:150px ;
+        margin-top:106px ;
         border-radius: 20px 20px 0px 0px;
         width: 100%;
     }
     .terova {
-        position: fixed;
+        position: absolute;
         margin-top: 17.5em;
         width: 100%;
         background: #FFFDE8; 
@@ -244,6 +259,7 @@
         width: 100%;
         height: 150px;
     }
+
 
 }
 
@@ -299,3 +315,13 @@
 .a_head{
     transform: scale(0.6);
 }   
+
+
+a:link {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.92rem;
+    text-decoration: none;
+}
+  
