--- a/src/components/personal/personal.css
+++ b/src/components/personal/personal.css
@@ -246,18 +246,28 @@
         border-radius: 20px 20px 0px 0px;
         width: 100%;
     }
-    .terova {
+
+    .terov{
         position: absolute;
-        margin-top: 17.5em;
         width: 100%;
         background: #FFFDE8; 
-        height: 300px;
+        height:390px;
+        overflow: scroll;
+        margin-top: 62px;
+    }
+    .terova {
+        position: absolute;
+        margin-top: 26.5em;
+        width: 100%;
+        background: #FFFDE8; 
+        height: 290px;
     }
 
     .check{
         background-color:#FFFDE8;
         width: 100%;
-        height: 150px;
+        height:2px;
+        margin-top: 38px;
     }
 
 
@@ -325,3 +335,23 @@ a:link {
     text-decoration: none;
 }
   
+.sorrow{
+    display:flex;
+    justify-content: space-between;
+    margin-top: 0.5rem;
+    position: relative;
+}
+
+.sorrow1{
+    position: absolute;
+    margin-left: -2rem;
+}
+.sorrow2{
+    position: absolute;
+    margin-top: -0.2rem;
+    margin-left: 1.6rem;
+}
+
+#mag{
+    transform: scale(2);
+}
